<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:showIn="navigation_view"
        android:theme="@style/AppTheme.ActionBar"
>

    <group android:checkableBehavior="single">

    <item
            android:id="@+id/home_fragment"
            android:icon="@drawable/ic_home"

            android:title="@string/navHome" />

    <item
            android:id="@+id/searchRoutine_fragment"
            android:icon="@drawable/ic_routine"
            android:title="@string/navRoutines" />

    <item
            android:id="@+id/profile_fragment"
            android:icon="@drawable/ic_profile"

            android:title="My Profile" />

    <item
            android:id="@+id/favourite_fragment"
            android:icon="@drawable/ic_fav"

            android:title="@string/navFav" />
    <item
            android:id="@+id/settings_fragment"
            android:icon="@drawable/ic_setting"
            android:title="@string/navSetting" />
    </group>

</menu>