<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home"
            android:orderInCategory="1"
            app:labelVisibilityMode="labeled"
            android:title="@string/navHome" />

    <item
            android:id="@+id/searchRoutine_fragmentFragment"
            android:icon="@drawable/ic_routine"
            android:orderInCategory="2"
            app:labelVisibilityMode="labeled"
            android:title="@string/search" />

    <item
            android:id="@+id/myFavouriteFragment"
            android:icon="@drawable/ic_fav"
            android:orderInCategory="3"
            app:labelVisibilityMode="labeled"
            android:title="Favourite" />

    <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_profile"
            android:orderInCategory="4"
            app:labelVisibilityMode="labeled"
            android:title="@string/profile" />

</menu>