<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_app">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="224dp"
        android:layout_height="397dp"
        android:contentDescription="@string/logo_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="240dp"
        android:background="?colorSecondary"
        android:backgroundTint="?colorSecondary"
        android:backgroundTintMode="?colorSecondary"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColorLink="?colorSecondary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:onClick="loginActivity"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="184dp"
        android:layout_height="52dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="156dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:onClick="ResgisterActivity"/>

</androidx.constraintlayout.widget.ConstraintLayout>