<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_app">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="243dp"
        android:layout_height="53dp"
        android:layout_marginBottom="64dp"
        android:background="@color/design_default_color_on_primary"
        android:hint="@string/username"
        android:textColor="@color/black"
        android:textColorHighlight="@color/purple_app"
        android:textColorHint="@color/purple_app"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText"
        android:layout_width="243dp"
        android:layout_height="53dp"
        android:layout_marginBottom="76dp"
        android:background="@color/design_default_color_on_primary"
        android:hint="@string/password"
        android:textColor="@color/purple_app"
        android:textColorHint="@color/purple_app"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:background="@color/purple_app"
        android:backgroundTint="@color/purple_app"
        android:text="@string/log_in"
        android:textColorHint="@color/purple_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>